--- a/Step01_Frontend_Web_Beginner/Event/Event.html
+++ b/Step01_Frontend_Web_Beginner/Event/Event.html
@@ -77,7 +77,7 @@
   </div> -->
 
 </div>
-<button onclick="welcome()">Show Content</button>
+<!-- <button onclick="welcome()">Show Content</button> -->
  
 <script src="./Event.js"></script>
 </body>
