form input event is done

--- a/Step01_Frontend_Web_Beginner/Form/FormInputEvent/FormInputEvent.html
+++ b/Step01_Frontend_Web_Beginner/Form/FormInputEvent/FormInputEvent.html
@@ -24,7 +24,7 @@
             />
             <br />
             <label id="notifikasiSisaKarakter">
-              Sisa karakter: <span id="sisaKarakter"></span>
+              Sisa Karakter <span id="sisaKarakter"></span>
             </label>
           </div>
 
