--- a/Step01_Frontend_Web_Beginner/Event/Event.html
+++ b/Step01_Frontend_Web_Beginner/Event/Event.html
@@ -52,7 +52,7 @@
     <button id="tombol">Ubah Caption</button>
   </div>
 
-  <!-- <div class="border1" onclick="alert('ELEMEN LANGIT')" align="center">
+  <div class="border1" onclick="alert('ELEMEN LANGIT')" align="center">
     LANGIT
     <div class="border2" onclick="alert('ELEMEN LUAR')" align="center">
       LUAR
@@ -61,7 +61,7 @@
         <div class="border4" onclick="alert('ELEMEN DALAM')" align="center">DALAM</div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <br>
 
