--- a/Step01_Frontend_Web_Beginner/Todoapps/index.html
+++ b/Step01_Frontend_Web_Beginner/Todoapps/index.html
@@ -36,6 +36,11 @@
     </div>
   </div>
 
+  <div class="container">
+    <h2 class="container-header">Yang sudah dilakukan</h2>
+    <div class="list-item" id="completed-todos">
+    </div>
+  </div>
 </div>
 
 <script src="./script.js"></script>
